--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 
     <properties>
         <project.type>multi</project.type>
-        <springdata.commons>1.12.0.BUILD-SNAPSHOT</springdata.commons>
+        <springdata.commons>1.12.1.RELEASE</springdata.commons>
         <source.level>1.7</source.level>
         <commonslang.version>2.6</commonslang.version>
         <bundlor.enabled>false</bundlor.enabled>
