--- a/spring-data-neo4j/pom.xml
+++ b/spring-data-neo4j/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <groupId>org.springframework.data</groupId>
         <artifactId>spring-data-neo4j-parent</artifactId>
-        <version>4.1.0.BUILD-SNAPSHOT</version>
+        <version>4.2.0.BUILD-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -26,7 +26,7 @@
 
     <properties>
         <neo4j.version>2.3.3</neo4j.version>
-        <neo4j.ogm.version>2.0.1</neo4j.ogm.version>
+        <neo4j.ogm.version>2.1.0-SNAPSHOT</neo4j.ogm.version>
         <ogm.properties>ogm-http.properties</ogm.properties>
     </properties>
 
