--- a/spring-data-neo4j/pom.xml
+++ b/spring-data-neo4j/pom.xml
@@ -37,7 +37,7 @@
             <dependency>
                 <groupId>org.neo4j</groupId>
                 <artifactId>neo4j-ogm-core</artifactId>
-                <version>${neo4j.ogm.version}</version>
+                <version>2.1.0-SNAPSHOT</version>
             </dependency>
 
 
