--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.springframework.data.build</groupId>
         <artifactId>spring-data-parent</artifactId>
-        <version>1.8.0.BUILD-SNAPSHOT</version>
+        <version>1.9.0.BUILD-SNAPSHOT</version>
     </parent>
 
     <modules>
@@ -24,7 +24,7 @@
 
     <properties>
         <project.type>multi</project.type>
-        <springdata.commons>1.12.1.RELEASE</springdata.commons>
+        <springdata.commons>1.13.0.BUILD-SNAPSHOT</springdata.commons>
         <source.level>1.7</source.level>
         <commonslang.version>2.6</commonslang.version>
         <bundlor.enabled>false</bundlor.enabled>
