[developer-improvements] -Updated poms to match JPA setup.

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,7 @@
         <developer>
             <id>mangrish</id>
             <name>Mark Angrish</name>
+            <email>mark.angrish at gmail.com</email>
             <roles>
                 <role>Developer</role>
             </roles>
